# nvgr

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: example.ipynb
docs/source/: conf.py  index.rst  installation.rst
docs/source/nvgr/: course.rst  distance.rst  latitude.rst  longitude.rst  loxodrome.rst  position.rst
nvgr/: __init__.py  course.py  distance.py  format.py  latitude.py  location.py  longitude.py  loxodrome.py  position.py
tests/: test_course.py  test_distance.py  test_latitude.py  test_location.py  test_longitude.py  test_loxodrome.py  test_position.py  test_version.py
