[project]
name = "nvgr"
dynamic = ["version"]
description = "Navigare - Nautical calculations"
authors = [
    { name = "Cees van de Griend", email = "cees@griend.eu" },
]
dependencies = [
    "pylint>=2.15.9",
]
requires-python = ">=3.9"
readme = "README.md"

[project.license]
text = "GPL-3.0-or-later"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "black>=22.12.0",
]

[tool.pdm.version]
source = "file"
path = "nvgr/__init__.py"

[tool.pdm.scripts]
test = "python3 -m pytest"
format = "python3 -m black nvgr/ tests/"
lint = "python3 -m pylint --disable=C,R nvgr/ tests/"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=nvgr"
testpaths = [
    "tests/",
]

[tool.black]
line-length = 88
target-version = [
    "py37",
]

[build-system]
requires = [
    "pdm-pep517>=1.0",
]
build-backend = "pdm.pep517.api"
